# backend/crates/api/src/handlers/mod.rs
@@ -5,3 +5,4 @@ pub mod export;
 pub mod models;
 pub mod organization;
 pub mod test_cases;
+pub mod test_results;
